# Metalm-NexusOps

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: nexusops_deploy.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py  ssh.py  state.py
backend/app/api/: router.py
backend/app/api/routes/: admin_rbac.py  ai_models.py  auth.py  chat.py  configs.py  deployments.py  events.py  history.py  monitor.py  overview.py  repos.py  servers.py
backend/app/auth/: deps.py  redis_client.py  security.py
backend/app/chat/: agent.py  service.py  tools.py
backend/app/db/: models.py  seed.py  session.py  storage.py
backend/app/notify/: deploy_notify.py  feishu.py  history_status.py
backend/app/scripts/: bootstrap_rbac.py
backend/app/utils/: datetime_fmt.py  github_api.py
ci/: nexusops_deploy.sh
db/: README.md  docker-compose.yml
db/configdata/: init.sql
develop/: init.sh
develop/backend_frontend/: README.md  config.dev.toml  config.toml  docker-compose.yml  down.sh  up.sh
docker/: README.md  docker-compose.yml
docker/backend/: Dockerfile  build.sh
docker/db/: docker-compose.yml
docker/frontend/: Dockerfile  build.sh  nginx.conf
docker/redis/: docker-compose.yml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: nexusops_user_guide.md
frontend/src/: App.jsx  main.jsx
server/: .gitignore  README.md  init_db.py  main.py  models.py  pyproject.toml  seed.py  storage.py
ui/: .gitignore  README.md  index.html  package.json  server.js
(+25 files in other folders)
