[project]
name = "backend"
version = "0.1.0"
description = "NexusOps FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "psycopg[binary]>=3.2.10",
    "uvicorn>=0.41.0",
]

[tool.uv]
package = false
