[project]
name = "backend"
version = "0.1.0"
description = "NexusOps FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "paramiko>=3.5.1",
    "redis>=6.4.0",
    "PyJWT>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "psycopg[binary]>=3.2.10",
    "uvicorn>=0.41.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.1",
    "langgraph>=0.0.1",
]

[tool.uv]
package = false
